Fleshed out course controller and added base for trainer controller